# newsletter

./: Cargo.toml  Dockerfile  README.md  configuration.yaml  flake.nix  spec.yaml
.github/workflows/: general.yaml
configuration/: base.yaml
migrations/: 20240527225128_create_subscriptions_table.sql  20240627002852_make_status_not_null_in_subscriptions.sql  20240627003246_create_subscription_tokens_table.sql  20240816193545_rename_password_column.sql
scripts/: http.sh  init.nix  init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
