[package]
name = "newsletter"
version = "0.1.0"
authors = ["Matt Cook <hello@mattcook.dev>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = "0.14.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
  "chrono",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "uuid"
]

[dev-dependencies]
reqwest = "0.12"

