[package]
name = "newsletter"
version = "0.1.0"
authors = ["Matt Cook <hello@mattcook.dev>"]
edition = "2021"
description = "Newsletter API"
readme = "README.md"
repository = "https://github.com/sciencefidelity/newsletter"
license = "MIT or Apache-2.0"
exclude = ["./scripts"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = 1 }
nursery = { level = "deny", priority = 2 }
unwrap_used = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dependencies]
actix-web = "4"
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = { version = "0.14.0", default-features = false, features = ["yaml"] }
rand = { version = "0.8", features = ["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
uuid = { version = "1", features = ["v4"] }
validator = "0.18"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
  "chrono",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "uuid",
]

[dev-dependencies]
claims = "0.7"
fake = "~2.3.0"
linkify = "0.10"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
once_cell = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.6"
